2012-05-13 Roman
- DB.Boiler: Some translation to English and Ukrainian is updated.
- FIX:UI.Vision: Export primitive "Diagram" to CVS is limited to real trend borders.
    Limit for variable "valsForPix" of primitive "Diagram" is expanded from 3 bit (<8) to 4 bit (<16).


2012-05-07 Roman
- UI.Vision: QFileDialog option QFileDialog::ReadOnly is set conditional to QT4 version >= 4.5.
- DAQ.DAQGate: Parameter's attributes sync function separated to different function sync() for prevent cache reload.
- DAQ.SoundCard: Aspect rate from real acquisition period to selected sample rate for microseconds period limit is added.
    Card name limit is expanded to 100 symbols.
    Sound card's counter run from system time correction make only at aspect rate to sample rate 1.
- UI.QTCfg: Tree update on page update made for parent page.
- DB: Font "Liberation" replaced to "Arial" into library "VCABase" for unification.
- SYS: Icons added for modules: DAQ.BFN, DAQ.BlockCalc, DAQ.DAQGate, DAQ.DCON, DAQ.DiamondBoards, DAQ.ICP_DAS, DAQ.JavaLikeCalc,
    DAQ.LogicLev, DAQ.ModBus, DAQ.OPC_UA, DAQ.SNMP, DAQ.Siemens, DAQ.SoundCard, Protocol.HTTP, Protocol.ModBus, Protocol.OPC_UA,
    Protocol.SelfSystem, Protocol.UserProtocol, Transport.Serial.


2012-05-04 Roman
- FIX:DAQ.DAQGate: Stations list update on start is added and generic fixed.
    Load parameters after enable on processing is restored.


2012-04-28 Roman
- UI.WebVision: Web-interface update period is limited to ({ModelPeriod}...60s).
- FIX:UI.WebVision: Trends paint is fixed to logical trand transparent.


2012-04-27 Roman
- SYS: Some code clean from warning by key "-Wall".
- UI.Vision: For mode "Full video" of primitive "Media" added:
    - Event "ws_MediaFinished" generation.
    - "Play" flag clean on play finish.
    - Play roll processing moved to generic play finish event handler.


2012-04-24 Roman
- FIX:Archive: Value archive's link address to DAQ parameter's attribute is fixed for old address format process.